# Akriveia

./: .gitignore  README.md
Firmware/: README.md
Firmware/Anchor_TWR/: Anchor_TWR.ino
Firmware/Anchor_TWR_WIFI/: Anchor_TWR_WIFI.ino
Firmware/Anchor_esp32_V1/: Anchor_esp32_V1.ino
Firmware/Anchor_pm33_V2/: Anchor_pm33_V2.ino
Firmware/Anchor_pm33_V2/Anchor_esp32_wifi_relay_V2/: Anchor_esp32_wifi_relay_V2.ino
Firmware/Anchor_pm33_V3/: Anchor_pm33_V3.ino
Firmware/Anchor_pm33_V3/Anchor_esp32_wifi_relay_V3/: Anchor_esp32_wifi_relay_V3.ino
Firmware/Anchor_pm33_V4/: Anchor_pm33_V4.ino
Firmware/Anchor_pm33_V4/Anchor_esp32_wifi_relay_V4/: Anchor_esp32_wifi_relay_V4.ino
Firmware/ID_Tag_V1/: ID_Tag_V1.ino
Firmware/Test_code/: distanceCalc.py  esp_plot_serial.py
Firmware/Test_code/AnchorA_TWR/: AnchorA_TWR.ino
Firmware/Test_code/AnchorB_TWR/: AnchorB_TWR.ino
Firmware/Test_code/AnchorC_TWR/: AnchorC_TWR.ino
Firmware/Test_code/Anchor_Old/AnchorA_esp32_Serial_TWR/: AnchorA_esp32_Serial_TWR.ino
Firmware/Test_code/Anchor_Old/Anchor_esp32_V1/: Anchor_esp32_V1.ino
Firmware/Test_code/Anchor_Old/Anchor_pm33_V2/: Anchor_pm33_V2.ino
Firmware/Test_code/Anchor_Old/Anchor_pm33_V2/Anchor_esp32_wifi_relay_V2/: Anchor_esp32_wifi_relay_V2.ino
Firmware/Test_code/BLE/ble_beacon_root/: ble_beacon_root.ino
Firmware/Test_code/BasicConnectivityTest/: BasicConnectivityTest.ino
Firmware/Test_code/BasicConnectivityTest-ng/: BasicConnectivityTest-ng.ino
Firmware/Test_code/DW1000Ranging_ANCHOR/: DW1000Ranging_ANCHOR.ino
Firmware/Test_code/MISC/beacon_usb_serial_ignition/: beacon_usb_serial_ignition.ino
Firmware/Test_code/MISC/esp32_sleep/: esp32_sleep.ino
Firmware/Test_code/MISC/esp32_sleep_test/: esp32_sleep_test.ino
Firmware/Test_code/MISC/index_counter/: index_counter.ino
Firmware/Test_code/MISC/pm33_hardware_serial/: pm33_hardware_serial.ino
Firmware/Test_code/MISC/reboot/: reboot.ino
Firmware/Test_code/Multi_Tag/: hex.txt
Firmware/Test_code/Multi_Tag/Anchor_MT/: DW1000NgRTLS_MT.hpp
Firmware/Test_code/Multi_Tag/Anchor_MT_V1/: Anchor_MT_V1.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_V2/: Anchor_MT_V2.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_cycle_head/Anchor_A/: Anchor_A.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_cycle_head/Anchor_B/: Anchor_B.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_cycle_head/Anchor_C/: Anchor_C.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_manual_range_init/Anchor_A/: Anchor_A.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_manual_range_init/Anchor_B/: Anchor_B.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_manual_range_init/Anchor_C/: Anchor_C.ino
Firmware/Test_code/Multi_Tag/Anchor_MT_manual_range_init_NO_BLINK/: Anchor_MT_manual_range_init_NO_BLINK.ino
Firmware/Test_code/Multi_Tag/Firmware_testing/Anchor_A/: Anchor_A.ino
Firmware/Test_code/Multi_Tag/Firmware_testing/Anchor_B/: Anchor_B.ino
Firmware/Test_code/Multi_Tag/id_tag_MT2/: id_tag_MT2.ino
Firmware/Test_code/beacon_wifi/: beacon_wifi.ino
Firmware/Test_code/id_tag_MT/: id_tag_MT.ino
Firmware/Test_code/id_tag_MT2/: DW1000NgRTLS_MT.cpp
Firmware/Test_code/python_test_code/: esp_plot_serial_no_start.py  multi_udp_test.py  serial_wifi_sender.py  tri_esp_plot_serial.py  udp_send.py
Firmware/Test_code/wifi/: wifi.ino
Firmware/Test_code/wifi_test_B/: wifi_test_B.ino
Firmware/id_tag/: id_tag.ino
beacon/: beacon_main.ino
beacon_code/: README.md
beacon_code/beacon/: beacon.ino  beacon_serial_ignition.ino
beacon_code/beacon_example_A/: beacon_example_A.ino
beacon_code/beacon_test/: beacon_test.ino
beacon_code/beacon_usb_serial_ignition/: beacon_usb_serial_ignition.ino
beacon_code/id_tag/: id_sleep.ino
beacon_main/: README.md  beacon_main.ino
beacon_main/DWM1000/BasicConnectivityTest/: BasicConnectivityTest.ino
beacon_main/DWM1000/DW1000Ranging_TAG/: DW1000Ranging_TAG.ino
beacon_main/DWM1000/RangingAnchor/: RangingAnchor.ino
beacon_main/DWM1000/RangingTag/: RangingTag.ino
beacon_main/Test_code/beacon_usb_serial_ignition/: beacon_usb_serial_ignition.ino
beacon_main/beacon_test_code/: distanceCalc.py  esp_plot.py
beacon_main/beacon_test_code/beacon_usb_serial_ignition/: beacon_usb_serial_ignition.ino
beacon_tag/: README.md
beacon_tag/id_tag_main/: id_tag_main.ino
id_tag_main/: README.md
id_tag_main/id_test_code/: id_sleep.ino
id_tag_main/id_test_code/id_sleep/: id_sleep.ino
serial_ignition/: serial_ignition.ino
server/: Cargo.toml  Makefile  RESOURCES  akriveia.cbp  akriveia.layout  static
server/backend/: Cargo.toml
server/backend/src/: ak_error.rs  backend.rs  beacon_conn.rs  beacon_dummy.rs  beacon_manager.rs  beacon_serial.rs  beacon_udp.rs  conn_common.rs  data_processor.rs  db_utils.rs  dummy_udp.rs  main.rs
server/backend/src/controllers/: beacon.rs  beacon_controller.rs  map.rs  map_controller.rs  mod.rs  network_interface_controller.rs  session_controller.rs  system.rs  system_controller.rs  user.rs  user_controller.rs
server/backend/src/models/: beacon.rs  map.rs  mod.rs  network_interface.rs  system.rs  user.rs
server/common/: Cargo.toml
server/common/src/: lib.rs  postgres_traits.rs  short_address.rs
server/env/: README  install  setup
server/env/host/: install  rust_config  setup
server/env/pi/: install  setup
server/frontend/: Cargo.toml
server/frontend/src/: canvas.rs  main.rs  util.rs
server/frontend/src/components/: beacon_add.rs  beacon_addupdate.rs  beacon_list.rs  beacon_update.rs  diagnostics.rs  emergency_buttons.rs  login.rs  map_addupdate.rs  map_list.rs  map_view.rs  mod.rs  root.rs  status.rs  system_settings.rs  user_addupdate.rs  user_list.rs  user_message.rs  value_button.rs
server/frontend/static/: index.html  style.css
server/src/: main.rs
server/src/backend/: Cargo.toml
server/src/web/: Cargo.toml  web.rs
server/web/: Cargo.toml
server/web/src/: main.rs
server/web/static/: index.html
server/web/templates/: index.html
usb_beacon/: usb_beacon.ino
