[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "server"
publish = false
version = "0.1.0"

[workspace]
members = [
	"backend",
	"common",
	"frontend"
]

# the eui crate depends on a deprecated crate that breaks wasm compilation,
# this patch makes the deprecated crate optional.
[patch.crates-io]
eui48 = { git = 'https://github.com/adam-rhebo/eui48', branch = 'make-rustc-serialize-optional' }
eui64 = { git = 'https://github.com/schecko/eui64' }
