[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "backend"
publish = false
version = "0.1.0"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix = "0.8.2"
actix-files = "0.1.1"
actix-session = "0.1.0"
actix-web = "1.0.0"
common = { path = "../common" }
env_logger = "0.6.1"
futures = "0.1.25"
nalgebra = "0.18.0"
rand = "0.7.0"
regex = "1.1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serialport = "3.2.0"
tokio = "0.1.22"
bytes = "0.4.12"
libudev-sys = "0.1"

[build-dependencies]
common = { path = "../common" }
