[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "backend"
publish = false
version = "0.1.0"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
actix = "0.8.2"
actix-files = "0.1.1"
actix-identity = "0.1.0"
actix-session = "0.1.0"
actix-web = "1.0.0"
bytes = "0.4.12"
chrono = { version = "0.4.0", features = ["serde"] }
common = { path = "../common", features = ["with_postgres"] }
env_logger = "0.6.1"
eui48 = { version = "0.4.6", default-features = false, features = ["serde", "serde_json"] }
eui64 = { version = "0.4.6", features = ["serde", "serde_json"] }
futures = "0.1.25"
ipc-channel = "0.12.0"
ipnet = { version = "2.0.0", features = ["serde"] }
itertools = "0.8.0"
lazy_static = "1.4.0"
libc = "0.2.0"
nalgebra = "0.18.0"
rand = { version = "0.7.0", features = [ "small_rng" ] }
regex = "1.1.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.22"
tokio-postgres = { version = "0.4.0-rc.3", features = ["with-eui48-0_4", "with-chrono-0_4"] }
