[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "common"
publish = false
version = "0.1.0"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
