[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "common"
publish = false
version = "0.1.0"

[lib]
name = "common"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
eui48 = { version = "0.4.6", default-features = false, features = ["serde", "serde_json"] }
eui64 = { version = "0.4.6", features = ["serde", "serde_json"] }
ipnet = { version = "2.0.0", features = ["serde"] }
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[features]
default = []
with_postgres = [ "eui64/with_postgres" ]

