[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "frontend"
publish = false
version = "0.1.0"

[dependencies]
common = { path = "../common" }
failure = "0.1"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stdweb = "0.4.18"
yew = { version = "0.7.0", features = ["cbor"] }

[build-dependencies]
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

