[package]
authors = ["Scott Checko <schecko@sfu.ca>"]
edition = "2018"
name = "frontend"
publish = false
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
common = { path = "../common" }
failure = "0.1.6"
lazy_static = "1.4.0"
nalgebra = { version = "0.18.0", features = ["serde-serialize"] }
num = "0.2.0"
palette = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
stdweb = "0.4.18"
yew = "0.8.0"

[build-dependencies]
common = { path = "../common" }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

