[package]
name = "web"
version = "0.1.0"
authors = ["Scott Checko <schecko@sfu.ca>"]
publish = false

[lib]
name = "web"
path = "web.rs"

[[bin]]
name = "web"
path = "web.rs"

[dependencies]
actix-web = "1.0.0"
actix-files = "0.1.1"
askama = "0.8"

[build-dependencies]
askama = "0.8"

[dev-dependencies]
env_logger = "0.6"

